# rac-compile

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: authoring-rac.md  compile-and-lower.md  compiler-architecture.md  decision-seam-a.md  validation-and-oracles.md
examples/: simple_tax.rac
examples/working_families/: README.md  base_amount.rac  benefit_amount.rac
src/rac_compile/: __init__.py  batch_executor.py  cli.py  compile_model.py  expression_ir.py  harness.py  js_generator.py  module_resolution.py  parameter_bindings.py  parser.py  program.py  python_generator.py  rule_bindings.py  rust_generator.py
src/rac_compile/calculators/: ctc.py  eitc.py  snap.py
src/rac_compile/validation/: __init__.py  comparator.py  runners.py
tests/: test_batch_executor.py  test_cli_coverage.py  test_compile_model.py  test_coverage_gaps.py  test_harness.py  test_js_generator.py  test_module_resolution.py  test_parameter_bindings.py  test_parser.py  test_program.py  test_python_generator.py  test_rule_bindings.py  test_rust_generator.py  test_validation_js.py  test_validation_modules.py
