[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rac-compile"
version = "0.2.0"
description = "Compile RAC .rac files to standalone JavaScript and Python calculators"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Rules Foundation", email = "hello@rules.foundation" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["rac", "rules-as-code", "tax", "benefits", "policy", "compiler", "javascript"]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "numpy>=1.24",
    "pandas>=1.5",
    "tqdm>=4.0",
    "towncrier>=23.0",
]
# PolicyEngine for external validation (heavy dependency, optional)
validation = [
    "policyengine-us>=1.0",
    "pandas>=1.5",
    "tqdm>=4.0",
]

[project.scripts]
rac-compile = "rac_compile.cli:main"
rac-validate = "rac_compile.validation.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rac_compile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.towncrier]
package = "rac_compile"
package_dir = "src"
directory = "changes"
filename = "CHANGELOG.md"
title_format = "{name} {version} ({project_date})"

[[tool.towncrier.type]]
directory = "feature"
name = "New features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
